# Dictator-md

./: AGENTS.md  DOWNLOAD.md  Makefile  README.md  SECURITY.md  project.yml
.github/workflows/: ci.yml  release.yml
DictatorMD/: DictatorMD-Bridging-Header.h  Info.plist
DictatorMD/App/: DictatorMDApp.swift
DictatorMD/Engine/: AudioCapture.swift  DictationEngine.swift  ModelManager.swift  ProsodyAnalyzer.swift  TextCorrector.swift  TextInjector.swift  WhisperBridge.swift
DictatorMD/UI/: BrandViews.swift  FloatingNodeView.swift  MenuBarView.swift  OnboardingView.swift  SettingsView.swift  SettingsWindowController.swift
DictatorMD/Utilities/: AppPaths.swift  AppUpdater.swift  (+6 more)
DictatorMDTests/: DictatorMDTests.swift
apps/windows/: CMakeLists.txt  README.md
apps/windows/src/: App.cpp  App.h  AudioCapture.cpp  AudioCapture.h  DictationPipeline.cpp  DictationPipeline.h  FocusTracker.cpp  FocusTracker.h  HotkeyManager.cpp  HotkeyManager.h  TextInjector.cpp  TextInjector.h  TrayIcon.cpp  TrayIcon.h  WindowsIds.h  main.cpp
core/: README.md
docs/: INTERNATIONAL_EXECUTION_PLAN.md  PLATFORM_READINESS_BLUEPRINT.md  UI_QUALITY_PROTOCOL.md  WINDOWS_MANUAL_TESTING.md  WINDOWS_PORT_EXECUTION.md  index.html  privacy.html
schemas/: history.schema.json  settings.schema.json
scripts/: create-dmg.sh  download-model.sh  generate-icon.py  install-local.sh  verify-codex-routing.sh  verify-dashboard-resize-ui.swift  verify-floating-node-ui.swift  verify-history-all-time-ui.swift  verify-mobile-scaffolds.sh  verify-monthly-activity-ui.swift  verify-platform-contracts.sh
(+27 files in other folders)
